change : video link

--- a/Tugas1.html
+++ b/Tugas1.html
@@ -98,15 +98,15 @@
       </div>
 
       <div class="anime">
-        <h2>Umayon</h2>
+        <h2>Uma Musume: Pretty Derby - Road to the Top</h2>
         <img
-          src="https://cdn.myanimelist.net/images/anime/1032/111641.jpg"
+          src="https://cdn.myanimelist.net/images/anime/1102/135552.jpg"
           alt="Anime Image 3"
         />
         <br />
         <button
           class="anime-button"
-          onclick="playAnime('U5X6CR0y3TY?si=VF0ckklEOesmV2VG')"
+          onclick="playAnime('pjPXzJedwiA?si=SOXh1DFz2QU7bOHD')"
         >
           Watch
         </button>
